Lucene search (#11542)
* Use pattern matching for cast

Co-authored-by: Christoph <siedlerkiller@gmail.com>

* Fix pattern matching

* Fix merge

* Speed up switches between sorting/filtering modes

* Fixed merge errors

* Fixed small issues

* Removed obsolete tests, fixed some tests

* Fixed merge error in CHANGELOG.md

* Fixed checkstyle

* Fixed more tests

* Removed obsolete tests

* Fixes "Fixed merge error in CHANGELOG.md" by removing duplicate entries

This reverts commit 536ecfaaedf9b14b93e3d50b1a63166f4440661e.

* WiP on tests

* Checkstyle

* Checkstyle

* Update Java version

* Refine logging

* Fix compile error

* Add LuceneTest

* Update CHANGELOG.md

* Move search classes to pdf package

* Move search classes to search package

* rewriteRun

* Remove bibEntry from DocumentReader

* Rewrite LuceneIndexer

* Remove IndexingTaskManager

* Separate Bib fields index and LinkedFiles index

* Fix null LuceneManager in ExternalFilesEntryLinker

* Save as action

* Clear linkedFiles indexer when fullText indexing is disabled in preferences

* remove comments

* get indexed files on update

* Add LUCENE_MANAGERS map for accessing managers by databaseContext.getUid

* Move LuceneManager from search.indexing package to search

* Fix wrong order for import

* Move SearchQuery to model package

* Fix issue with opening multiple unsaved libraries

* Pass LuceneManager down to the entry editor

* Improve searching performance

* Change SearchFieldConstants to enum

* More performance improvements for searching

- Read document only one time
- getHighlighterFragments only when the search results tab is opened

* Update FulltextSearchResultsTab.java

* Fix group union, intersection

* Fix backgroundtask

* Fix subscriptions

* Remove lastSearchQueryLogic

* Fix possible NPE

* Fix searchTask check

* Remove sort by score flag

* Fix score column sorting

* Fix modifier buttons listener

* Add search rank column

In floating mode entries will be ranked and sorted by it